spade-tests/src/snapshots/spade_tests__hir_lowering__argument_list_tests__signextending_to_shorter_value.snap
---
source: spade-tests/src/hir_lowering.rs
---
fn main() -> int<4> {
    let a: int<8> = 0;
    let b: int<4> = std::num::sext(a);
    b
}


error: Expected M >= 8 but M is 4 
  ┌─ testinput:3:21
  │
3 │     let b: int<4> = std::num::sext(a);
  │                     ^^^^^^^^^^^^^^^^^ Expected M >= 8, but M is 4
  │
  = note: Sign-extend result must be wider than the input value
